Fixed alignment of the ul.linktree content

--- a/src/_includes/css/main.css
+++ b/src/_includes/css/main.css
@@ -30,6 +30,11 @@ h3 {
 	font-size: 1.6em;
 }
 
+ul.linktree {
+  margin: auto;
+  padding: 0;
+}
+
 .linktree a {
 	text-decoration: none;
 }
